# howbig

./: Cargo.toml  LICENSE  README.md  ROADMAP.md  TODO.md
src/: main.rs  scanner.rs  tree.rs
