[package]
name = "howbig"
version = "0.1.1"
edition = "2024"
description = "A simple CLI tool to check the size of files and directories."
authors = ["Martin Östemar <martin.ostemar@gmail.com>"]
repository = "https://github.com/ostemar/howbig"

[dependencies]
clap = { version = "4", features = ["derive"] }
rayon = "1.11"
num_cpus = "1.17"
owo-colors = "4"
